--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "css-loader": "^2.1.0",
     "image-webpack-loader": "^4.6.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.2",
     "webpack-dev-server": "^3.1.14"
   },
