--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-router-dom": "^4.3.1",
     "css-loader": "^2.1.0",
+    "email-validator": "^2.0.4",
     "image-webpack-loader": "^4.6.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
