--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/rileyskyler/Notifar#readme",
   "dependencies": {
+    "@types/google-maps-react": "^2.0.1",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-router-dom": "^4.3.1",
     "css-loader": "^2.1.0",
     "email-validator": "^2.0.4",
+    "google-maps-react": "^2.0.2",
     "image-webpack-loader": "^4.6.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
